--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "dotenv": "^16.4.5",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "touch": "^3.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
