--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,17 +20,13 @@ definitions:
         name: Deploy to DigitalOcean
         deployment: production
         script:
-          - pipe: atlassian/ssh-run:0.4.0
-            variables:
-              SSH_USER: $DO_SSH_USER
-              SERVER: $DO_SERVER_IP
-              SSH_KEY: $DO_SSH_PRIVATE_KEY
-              COMMAND: |
-                cd /home/$DO_SSH_USER/projects/sharemy-backend
-                git pull origin main
-                npm install
-                # pm2 restart sharemy-backend
-                npm run start:prod
+          - apt-get update && apt-get install -y sshpass
+          - sshpass -p $DO_SSH_PASSWORD ssh -o StrictHostKeyChecking=no $DO_SSH_USER@$DO_SERVER_IP "
+              cd /home/$DO_SSH_USER/projects/sharemy-backend &&
+              git pull origin main &&
+              npm install &&
+              npm run start:prod
+            "
 
 pipelines:
   default:
