--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,14 +20,17 @@ definitions:
         name: Deploy to DigitalOcean
         deployment: production
         script:
-          - apt-get update && apt-get install -y sshpass
-          - sshpass -p $DO_SSH_PASSWORD ssh -o StrictHostKeyChecking=no nodejs@$DO_SERVER_IP "
-              cd /home/nodejs &&
-              git pull origin main &&
-              npm install &&
-              npm run build &&
-              pm2 restart sharemy-backend
-            "
+          - pipe: atlassian/ssh-run:0.4.0
+            variables:
+              SSH_USER: $DO_SSH_USER
+              SERVER: $DO_SERVER_IP
+              SSH_KEY: $DO_SSH_PRIVATE_KEY
+              COMMAND: |
+                cd /home/nodejs
+                git pull origin main
+                npm install
+                # pm2 restart sharemy-backend
+                npm run start:prod
 
 pipelines:
   default:
