--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.18.0",
     "crossenv": "0.0.2-security",
     "dotenv": "^16.4.5",
     "pg": "^8.12.0",
@@ -34,7 +35,7 @@
     "touch": "^3.1.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^10.4.4",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
@@ -55,6 +56,7 @@
     "jest": "^29.5.0",
     "lint-staged": "^15.2.8",
     "prettier": "^3.3.3",
+    "prisma": "^5.18.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
